--- a/index.html
+++ b/index.html
@@ -81,14 +81,14 @@
         </div>
     </section><!-- features -->
 
-    <section id="ristr" class="works section no-padding">
+    <section id="costr" class="works section no-padding">
         <div class="container-fluid">
 			<div class="row">
                 <div class="text-center">
-                    <h1>Ristrutturazioni</h1>
+                    <h1>Costruzioni</h1>
                 </div><!-- banner text -->				
 			</div>
-            <div class="row no-gutter">
+            <div class="row no-gutter text-center">
                 <div class="col-lg-3 col-md-6 col-sm-6 work">
                     <a href="images/new-work-1-res.jpg" class="work-box">
                         <img src="images/new-work-1-res.jpg" alt="">
@@ -110,7 +110,7 @@
                     </a>
                 </div>
 				<div class="col-lg-12 col-md-6 col-sm-6 work">
-                    <a href="images/work-5-res.jpg" class="work-box">
+                    <a href="images/new-work-5-res.jpg" class="work-box">
                         <img src="images/new-work-5-res.jpg" alt="">
                     </a>
                 </div>
@@ -118,14 +118,14 @@
         </div>
     </section><!-- works -->
 	
-    <section id="costr" class="works section no-padding">
+    <section id="ristr" class="works section no-padding">
         <div class="container-fluid">
 			<div class="row">
                 <div class="text-center">
-                    <h1>Costruzioni</h1>
+                    <h1>Ristrutturazioni</h1>
                 </div><!-- banner text -->				
 			</div>		
-            <div class="row no-gutter">
+            <div class="row no-gutter text-center">
                 <div class="col-lg-3 col-md-6 col-sm-6 work">
                     <a href="images/work-1.jpg" class="work-box">
                         <img src="images/work-1.jpg" alt="">
@@ -183,10 +183,6 @@
                             <h5 class="role">Fondatore, Manager</h5>
                             <p>E' possibile aggiungere ulteriori dettagli qui</p>
                         </div>
-                        <ul class="social-icons clearfix">
-                            <li><a href="#"><span class="fa fa-facebook"></span></a></li>
-                            <li><a href="#"><span class="fa fa-twitter"></span></a></li>
-                        </ul>
                     </div><!-- person -->
                 </div>
                 <div class="col-md-3 col-sm-6">
@@ -197,10 +193,6 @@
                             <h5 class="role">Collaboratore, Muratore</h5>
                             <p>E' possibile aggiungere ulteriori dettagli qui</p>
                         </div>
-                        <ul class="social-icons clearfix">
-                            <li><a href="#" class=""><span class="fa fa-facebook"></span></a></li>
-                            <li><a href="#" class=""><span class="fa fa-twitter"></span></a></li>
-                        </ul>
                     </div><!-- person -->
                 </div>
 				<div class="col-md-3 col-sm-6">
@@ -215,6 +207,7 @@
                     <div class="footer-col col-md-4">
                         <h5>DOVE SIAMO</h5>
                         <p>Via Roma<br>Formello, CAP 00060</p>
+						<p>E possibile aggungere qui anche un collegamento diretto con Google Maps</p>
                     </div>
                     <div class="footer-col col-md-4">
                         <h5>Condividi sui social</h5>
@@ -226,6 +219,7 @@
                     <div class="footer-col col-md-4">
                         <h5>Contattaci</h5>
                         <p>Per qualsiasi domanda puoi scriverci al seguente indirizzo <a href="mailto:email@host.it">email@host.it</a> </p>
+						<p>o chiamarci ai seguenti numeri: <br> <a href="tel:5551234567">Call (555)123-4567</a> <br> <a href="tel:5551234567">Call (555)123-4567</a></p>
                     </div>
                 </div>
             </div>
@@ -233,7 +227,7 @@
         <div class="footer-bottom">
             <div class="container">
                 <div class="col-md-12">
-                    <p>Copyright © 2020 SigiEdil.Tutti i diritti sono riservati<br>Fatto con il <i class="fa fa-heart pulse"></i> da <a href="https://twitter.com/neo7bf">neo7bf</a></p>
+                    <p>Copyright © 2020 SigiEdil. Tutti i diritti sono riservati<br>Fatto con il <i class="fa fa-heart pulse"></i> da <a href="https://twitter.com/neo7bf">neo7bf</a></p>
                 </div>
             </div>
         </div>
