--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                     <div class="footer-col col-md-4">
                         <h5>Contattaci</h5>
                         <p>Per qualsiasi domanda puoi scriverci al seguente indirizzo <a href="mailto:email@host.it">email@host.it</a> </p>
-						<p>o chiamarci ai seguenti numeri: <br> <a href="tel:5551234567">Call (555)123-4567</a> <br> <a href="tel:5551234567">Call (555)123-4567</a></p>
+						<p>o chiamarci ai seguenti numeri (Se si clicca il numero da smartphone o dai browser supportati parte immediatamente la chiamata): <br> <a href="tel:5551234567">Call (555)123-4567</a> <br> <a href="tel:5551234567">Call (555)123-4567</a></p>
                     </div>
                 </div>
             </div>
