--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <section id="costr" class="works section no-padding">
         <div class="container-fluid">
 			<div class="row">
-                <div class="text-center">
+                <div class="work-category-text text-center">
                     <h1>Costruzioni</h1>
                 </div><!-- banner text -->				
 			</div>
@@ -121,7 +121,7 @@
     <section id="ristr" class="works section no-padding">
         <div class="container-fluid">
 			<div class="row">
-                <div class="text-center">
+                <div class="work-category-text text-center">
                     <h1>Ristrutturazioni</h1>
                 </div><!-- banner text -->				
 			</div>		
@@ -200,7 +200,7 @@
             </div>
         </div>
     </section><!-- teams -->
-    <footer id="contattaci" class="footer">
+    <footer class="footer">
         <div class="footer-top">
             <div class="container">
                 <div class="row">
@@ -216,10 +216,10 @@
                             <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                         </ul>
                     </div>
-                    <div class="footer-col col-md-4">
+                    <div id="contattaci" class="footer-col col-md-4">
                         <h5>Contattaci</h5>
                         <p>Per qualsiasi domanda puoi scriverci al seguente indirizzo <a href="mailto:email@host.it">email@host.it</a> </p>
-						<p>o chiamarci ai seguenti numeri (Se si clicca il numero da smartphone o dai browser supportati parte immediatamente la chiamata): <br> <a href="tel:5551234567">Call (555)123-4567</a> <br> <a href="tel:5551234567">Call (555)123-4567</a></p>
+						<p>o chiamarci ai seguenti numeri (Al clic verrà aperto smartphone o dai browser supportati parte immediatamente la chiamata): <br> <a href="tel:5551234567">Call (555)123-4567</a> <br> <a href="tel:5551234567">Call (555)123-4567</a></p>
                     </div>
                 </div>
             </div>
